fix ui overflow problem on issues page

--- a/server/sonar-web/src/main/less/components/search-navigator.less
+++ b/server/sonar-web/src/main/less/components/search-navigator.less
@@ -445,6 +445,7 @@
 
 .search-navigator-workspace {
   padding-left: @sideWidth;
+  overflow-x: hidden;
 }
 
 .search-navigator-workspace-header {
